@@ -3,6 +3,7 @@ package br.com.danielschiavo.shop;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
@@ -13,11 +14,11 @@ public class ShopApplication {
 	public static void main(String[] args) {
 		SpringApplication.run(ShopApplication.class, args);
 		
-		final Path raizPerfil = Path.of(System.getProperty("user.home") + "/.shop/" + "imagens/perfil");
+		final Path raizPerfil = Paths.get("imagens/perfil");
 
-		final Path raizProduto = Path.of(System.getProperty("user.home") + "/.shop/" + "imagens/produto");
+		final Path raizProduto = Paths.get("imagens/produto");
 		
-		final Path raizPedido = Path.of(System.getProperty("user.home") + "/.shop/" + "imagens/pedido");
+		final Path raizPedido = Paths.get("imagens/pedido");
 		
 		try {
 			if (!Files.exists(raizPerfil)){
